missing_report.txt
python :   File "<string>", line 65
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 65:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'  MISSING: {name}  (found in: {" \.join(files)})')
                                                             ^
SyntaxError: f-string expression part cannot include a backslash

